--- a/movies-explorer/src/components/AboutProject/AboutProject.css
+++ b/movies-explorer/src/components/AboutProject/AboutProject.css
@@ -120,6 +120,10 @@
         font-size: 12px;
         line-height: 18px; 
     }
+
+    .project__stagename {
+        font-weight: 400;
+    }
 }
 
 @media screen and (max-width: 440px) {
