--- a/movies-explorer/src/components/Footer/Footer.css
+++ b/movies-explorer/src/components/Footer/Footer.css
@@ -1,10 +1,10 @@
 .footer {
-    padding: 70px 30px 20px;
+    padding: 79px 70px 20px;
 }
 
 .footer__caption {
     margin: 0;
-    padding-bottom: 20px;
+    padding-bottom: 19px;
     border-bottom: 1px solid #E8E8E8;
     color: #A0A0A0;
     text-align: center;
@@ -41,6 +41,7 @@
 .footer__item {
     margin: 0;
     padding: 0;
+    line-height: 0;
 }
 
 .footer__link {
@@ -55,7 +56,7 @@
 
 @media screen and (max-width: 768px){
     .footer {
-        padding-top: 79px;
+        padding: 79px 30px 20px;
 
     }
 }
@@ -77,6 +78,10 @@
         gap: 30px;
     }
 
+    .footer__copyright {
+        font-size: 12px;
+    }
+
     .footer__links {
         flex-direction: column;
         gap: 12px;
@@ -84,6 +89,7 @@
 
     .footer__link {
         width: 100%;
+        font-size: 12px;
         display: inline-block;
         text-align: center;
     }
