--- a/movies-explorer/src/components/Techs/Techs.css
+++ b/movies-explorer/src/components/Techs/Techs.css
@@ -2,15 +2,9 @@
     padding: 100px 70px;
 }
 
-/* .techs__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
-
 .techs__title {
     margin: 0;
-    padding-bottom: 23px;
+    padding-bottom: 24px;
     color: #000;
     font-size: 22px;
     font-style: normal;
@@ -112,6 +106,7 @@
     .techs__motto {
         margin-top: 60px;
         font-size: 30px;
+        line-height: normal;
         letter-spacing: -1.2px;
 
     }
