--- a/movies-explorer/src/components/Form/Form.css
+++ b/movies-explorer/src/components/Form/Form.css
@@ -1,32 +1,33 @@
 .form {
-    margin: 74px 0 16px;
-    width: calc(54vw);
-    min-width: 410px;
-    max-width: 410px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.form__title {
-    margin: 0;
-    color: #000;
-    text-align: center; 
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+.form_type_logreg {
+    min-height: 450px;
+    margin: 40px 0 16px;
+    width: calc(51.5vw);
+    min-width: 396px;
+    max-width: 396px;
+}
+
+.form__title_logreg {
+    text-align: left;
 }
 
 @media screen and (max-width: 768px) {
-    .form {
-        margin-top: 236px;
+    .form_type_logreg {
         min-width: 260px;
     }
 }
+@media screen and (max-width: 440px) {
+    .form_type_logreg {
+        margin: 50px 0 14px;
+        width: calc(81vw);
+    }
 
-@media screen and (max-width: 320px){
-    .form {
-        margin-top: 70px;
+    .form__title_logreg {
+        text-align: center;
     }
 }
