--- a/movies-explorer/src/components/Form/Form.css
+++ b/movies-explorer/src/components/Form/Form.css
@@ -1,33 +1,44 @@
 .form {
+    height: 100%;
+    min-height: 280px;
     display: flex;
+    flex: 1 1;
     flex-direction: column;
     align-items: center;
-}
-
-.form_type_logreg {
-    min-height: 450px;
-    margin: 40px 0 16px;
     width: calc(51.5vw);
     min-width: 396px;
     max-width: 396px;
 }
 
-.form__title_logreg {
+.form__title {
+    width: 100%;
+    margin: 0 0 40px;
     text-align: left;
+    color: #000;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 
+.form__button-wrapper {
+    margin-top: auto;
+    width: 100%;
+}
+
+
 @media screen and (max-width: 768px) {
-    .form_type_logreg {
+    .form {
         min-width: 260px;
     }
 }
 @media screen and (max-width: 440px) {
-    .form_type_logreg {
-        margin: 50px 0 14px;
+    .form {
         width: calc(81vw);
     }
 
-    .form__title_logreg {
+    .form__title {
+        margin-bottom: 80px;
         text-align: center;
     }
 }
