--- a/movies-explorer/src/components/Button/Button.css
+++ b/movies-explorer/src/components/Button/Button.css
@@ -14,6 +14,20 @@
     opacity: 0.8;
 }
 
+/* Стили для кнопки "еще" */
+
+.button_type_more {
+    width: 320px;
+    height: 36px;
+    border: none;
+    border-radius: 6px;
+    background-color: #f4f4f4;
+    color: #000;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: normal;
+}
+
 /* Стили для кнопки сабмита форм регистрации, логина, профиля */
 
 .button_type_logreg {
