/dev feat: do all markup

--- a/movies-explorer/src/components/NotFound/NotFound.css
+++ b/movies-explorer/src/components/NotFound/NotFound.css
@@ -1,13 +1,14 @@
 .notfound {
     /* background-color: #FFF; */
     height: 100vh;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
 .notfound__title {
-    margin: 246px 0 0;
     color: #000;
     text-align: center;
     font-size: 140px;
@@ -17,7 +18,7 @@
 }
 
 .notfound__caption {
-    margin: 4px 0 184px;
+    margin-top: 4px;
     color: #000;
     text-align: center;
     font-size: 16px;
@@ -27,6 +28,10 @@
 }
 
 .notfound__link {
+    /* margin-top: auto; */
+    position: absolute;
+    bottom: 60px;
+    display: block;
     color: #3456F3;
     text-align: center;
     text-decoration: none;
@@ -43,23 +48,24 @@
 }
 
 @media screen and (max-width: 768px){
-    .notfound__title {
-        margin-top: 407px;
+    .notfound__link {
+        bottom: 222px;
     }
 }
 
 @media screen and (max-width: 320px){
     .notfound__title {
-        margin-top: 329px;
         font-size: 80px;
     }
 
     .notfound__caption {
-        margin: 9px 0 284px;
-        font-size: 14px;
+        margin-top: 9px;
+        /* margin: 9px 0 284px; */
+        font-size: 12px;
     }
 
     .notfound__link {
+        bottom: 30px;
         font-size: 12px;
     }
 }
