--- a/movies-explorer/src/components/MoviesCard/MoviesCard.css
+++ b/movies-explorer/src/components/MoviesCard/MoviesCard.css
@@ -1,5 +1,6 @@
 .card {
-    width: 270px;
+    width: 100%;
+    max-width: 270px;
     height: 218px;
     box-sizing: border-box;
     background-color: #fff;
@@ -34,6 +35,7 @@
 }
 
 .card__title {
+    max-width: 150px;
     color: #000;
     font-size: 13px;
     font-style: normal;
@@ -92,4 +94,26 @@
 
 .card__button_delete:hover {
     opacity: .7;
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        max-width: 339px;
+        height: 257px;
+    }
+
+    .card__image {
+        height: 190px;
+    }
+}
+
+@media screen and (max-width: 540px) {
+    .card {
+        max-width: 300px;
+        height: 235px;
+    }
+
+    .card__image {
+        height: 168px;
+    }
 }
