--- a/movies-explorer/src/components/MoviesCardList/MoviesCardList.css
+++ b/movies-explorer/src/components/MoviesCardList/MoviesCardList.css
@@ -6,4 +6,30 @@
     display: grid;
     gap: 32px 20px;
     grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: auto;
+    /* grid-template-columns: repeat(auto-fit, 270px); */
+    /* justify-content: center; */
+}
+
+@media screen and (max-width: 990px) {
+    .elements {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .elements {
+        width: calc(100% - 60px);
+        gap: 36px 30px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 540px) {
+    .elements {
+        width: calc(100% - 10px);
+        row-gap: 20px;
+        grid-template-columns: repeat(1, 1fr);
+        justify-items: center;
+    }
 }
