--- a/movies-explorer/src/components/Navigation/Navigation.css
+++ b/movies-explorer/src/components/Navigation/Navigation.css
@@ -20,6 +20,7 @@
     visibility: visible;
     opacity: 1;
     transition: visibility 0s linear, opacity .4s ease;
+    z-index: 10;
 }
 
 .navigation__list {
