--- a/movies-explorer/src/components/SearchForm/SearchForm.css
+++ b/movies-explorer/src/components/SearchForm/SearchForm.css
@@ -18,6 +18,11 @@
     box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
 }
 
+.search__label {
+    margin-left: 20px;
+    max-width: 70%;
+}
+
 .search__input-icon {
     position: relative;
 }
@@ -33,6 +38,7 @@
 }
 
 .search__input {
+    width: 100%;
     padding-left: 44px;
     color: #A0A0A0;
     font-feature-settings: 'clig' off, 'liga' off;
@@ -49,9 +55,8 @@
 }
 
 .search__button-block {
-    margin-right: 30px;
-    display: flex;
-    align-items: center;
+    margin-left: auto;
+    line-height: 0;
 }
 
 .search__go {
@@ -71,8 +76,9 @@
 
 .search__options {
     margin-left: 19px;
+    margin-right: 30px;
     height: 40px;
-    padding-left: 10px;
+    padding-left: 30px;
     display: flex;
     align-items: center;
     border-left: 1px solid #CBCBCB;
@@ -102,7 +108,6 @@
 .search__thumb::before {
     position: absolute;
     top: 2px;
-    
     content: "";
     width: 10px;
     height: 10px;
@@ -116,7 +121,8 @@
 }
 
 .search__thumb_active::before {
-    left: 20px;
+    transform: translateX(5px);
+    /* left: 20px; */
     background-color: #FFF;
 }
 
@@ -127,4 +133,64 @@
     font-style: normal;
     font-weight: 400;
     line-height: 18px;
+}
+
+@media screen and (max-width: 768px) {
+    .search {
+        width: calc(100% - 60px);
+        padding: 80px 0 110px;
+    }
+
+    /* .search__button-block {
+        margin-right: 20px;
+    } */
+    .search__options {
+        margin-right: 20px;
+        padding-left: 20px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .search__input-icon::before {
+        display: none;
+    }
+    .search__input {
+        padding-left: 0;
+    }
+
+    .search__form-container {
+        position: relative;
+    }
+
+    .search__button-block {
+        margin-right: 20px;
+    }
+
+    .search__options {
+        padding: 0;
+        margin: 0;
+        position: absolute;
+        width: 100%;
+        left: 0;
+        top: 107px;
+        border: none;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .search {
+        width: calc(100% - 20px);
+    }
+
+    .search__input {
+        font-size: 14px;
+        line-height: 20px;
+    }
+
+    .search__option {
+        font-size: 11px;
+        line-height: 18px;
+    }
+    
 }
