--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -27,6 +27,7 @@
 
 @media screen and (max-width: 540px) {
     .elements {
+        padding-top: 50px;
         width: calc(100% - 10px);
         row-gap: 20px;
         grid-template-columns: repeat(1, 1fr);
